syntax = "proto3";

package xyz.block.ftl.v1;

import "xyz/block/ftl/v1/schema/schema.proto";

option go_package = "github.com/TBD54566975/ftl/protos/xyz/block/ftl/v1;ftlv1";
option java_multiple_files = true;

message PingRequest {}
message PingResponse {}

message Metadata {
  message Pair {
    string key = 1;
    string value = 2;
  }
  repeated Pair values = 1;
}

message CallRequest {
  Metadata metadata = 1;

  schema.VerbRef verb = 2;
  bytes body = 3;
}
message CallResponse {
  message Error {
    string message = 1;
    // TODO: Richer error type.
  }

  oneof response {
    bytes body = 1;
    Error error = 2;
  }
}

message ListRequest {}
message ListResponse {
  repeated schema.VerbRef verbs = 1;
}

message SendRequest {
  Metadata metadata = 1;

  schema.VerbRef verb = 2;
  bytes body = 3;
}
message SendResponse {}

// VerbService is a common interface shared by multiple services for calling Verbs.
service VerbService {
  // Ping service for readiness.
  rpc Ping(PingRequest) returns (PingResponse);

  // Issue a synchronous call to a Verb.
  rpc Call(CallRequest) returns (CallResponse);

  // Issue an asynchronous call to a Verb.
  rpc Send(SendRequest) returns (SendResponse);

  // List the available Verbs.
  rpc List(ListRequest) returns (ListResponse);
}

message PushSchemaRequest {
  schema.Module schema = 1;
}
message PushSchemaResponse {}

message PullSchemaRequest {}
message PullSchemaResponse {
  schema.Module schema = 1;
  // If true, there are more schema changes immediately following this one.
  // If false, there still may be more schema changes in the future.
  bool more = 2;
}

// DevelService is the service that provides language-specific development and
// deployment functionality.
//
// The DevelService is responsible for hot reloading when code changes, and
// passing Verb calls through.
service DevelService {
  // Ping service for readiness.
  rpc Ping(PingRequest) returns (PingResponse);

  // Push schema changes to the server.
  rpc PushSchema(stream PushSchemaRequest) returns (PushSchemaResponse);

  // Pull schema changes from the server.
  rpc PullSchema(PullSchemaRequest) returns (stream PullSchemaResponse);
}

message GetArtefactDiffsRequest {
  repeated string client_digests = 1;
}
message GetArtefactDiffsResponse {
  repeated string missing_digests = 1;
}

message UploadArtefactRequest {
  bytes content = 1;
}
message UploadArtefactResponse {
  bytes digest = 2;
}

message DeploymentArtefact {
  string digest = 1;
  string path = 2;
  bool executable = 3;
}

message CreateDeploymentRequest {
  schema.Module schema = 1;
  repeated DeploymentArtefact artefacts = 2;
}
message CreateDeploymentResponse {
  string deployment_key = 1;
}

service BackplaneService {
  // Ping service for readiness.
  rpc Ping(PingRequest) returns (PingResponse);

  // Get list of artefacts that differ between the server and client.
  rpc GetArtefactDiffs(GetArtefactDiffsRequest) returns (GetArtefactDiffsResponse);

  // Upload artefacts to the server.
  rpc UploadArtefact(UploadArtefactRequest) returns (UploadArtefactResponse);

  // Create a deployment.
  rpc CreateDeployment(CreateDeploymentRequest) returns (CreateDeploymentResponse);
}
